--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +8,18 @@
     <script src="scripts/client.js"></script>
     <title>NG 2 Canopus</title>
 </head>
-
-<body ng-app='myApp'>
-    <h1>NG 2 Canopus</h1>
-    <section ng-controller="ReviewController as RC">
-        <h2>Review Stuff!!!</h2>
-        <input type="text" placeholder="1 of your favorite bands" ng-model='RC.bandIn'>
-        <p>{{ RC.bandIn }}</p>
-    </section>
+<body ng-app="myApp">
+   <h1>NG 2 Canopus</h1> 
+   <section ng-controller="ReviewController as RC">
+    <h2>Review stuff!!!</h2>
+    <input type='text' placeholder='1 band' ng-model='RC.bandIn'>
+    <p>{{ RC.bandIn }}</p>
+    <button ng-click="RC.addBand()">Add Band</button>
+    <ul>
+        <li ng-repeat="band in RC.bands">
+            You like: {{ band }}
+        </li>
+    </ul>
+   </section>
 </body>
-
 </html>
